--- a/index.html
+++ b/index.html
@@ -29,6 +29,209 @@
             <img src="./images/hero.png" alt="" height="400" width="473">
         </div>
     </header>
+    <main>
+        <section class="card">
+            <h1>Pillars of "Bangladesh 2.0"</h1>
+            <div class="card-container">
+                <div class="card-items">
+                    <img src="./images/card-icon.png" alt="" height="64" width="64">
+                    <h4>Inovation</h4>
+                    <p>Driving change through new technologies and creative solutions.</p>
+                </div>
+                <div class="card-items">
+                    <img src="./images/card-icon.png" alt="" height="64" width="64">
+                    <h4>Sansability</h4>
+                    <p> Ensuring progress while protecting the environment.</p>
+                </div>
+                <div class="card-items">
+                    <img src="./images/card-icon.png" alt="" height="64" width="64">
+                    <h4>Infrastructure</h4>
+                    <p>Building modern roads, bridges, and digital connectivity.</p>
+                </div>
+                <div class="card-items">
+                    <img src="./images/card-icon.png" alt="" height="64" width="64">
+                    <h4>Empowerment</h4>
+                    <p>Enabling people with skills, knowledge, and opportunities.</p>
+                </div>
+            </div>
+        </section>
+        <section class="vision">
+            <h1 class="pe">The Vision of Future</h1>
+            <p class="pe">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology,
+                promoting
+                inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital
+                transformation, and robust infrastructure, the country is set to become a global model of development.
+            </p>
+            <div class="vision-container">
+                <div class="vision-items1 vision-items">
+                    <img src="./images/card-icon.png" alt="" height="62" width="62">
+                    <h4 class="po">Digital Transformation</h4>
+                    <p class="po">Creating a nationwide digital ecosystem to enhance connectivity and access to services
+                        for all
+                        citizens.</p>
+                    <button>Learn more</button>
+                </div>
+                <div class="vision-items2 vision-items">
+                    <img src="./images/card-icon.png" alt="" height="62" width="62">
+                    <h4 class="po">Green Energy</h4>
+                    <p class="po">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.
+                    </p>
+                    <button>Learn more</button>
+                </div>
+
+                <div class="vision-items3 vision-items">
+                    <img src="./images/card-icon.png" alt="" height="62" width="62">
+                    <h4 class="po">Modern Infrastructure</h4>
+                    <p class="po">Building state-of-the-art infrastructure to support economic growth and global
+                        competitiveness.
+                    </p>
+                    <button>Learn more</button>
+                </div>
+            </div>
+            <div class="yo">
+                <img src="./images/quote-bg.png" alt="">
+                <p class="pe">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore
+                    sequi
+                    quos deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis
+                    culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit,
+                    dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam
+                    tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam architecto
+                    soluta
+                    necessitatibus vero?"</p>
+                <h4 class="pe">Dr. Muhammad Yunus</h4>
+                <small class="pe">Chief Adviser of the People's Republic of Bangladesh</small>
+            </div>
+        </section>
+        <section class="table">
+            <div class="table-container">
+                <h2>Your Opinion Matters</h2>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Questions</th>
+                            <th>Select Your Opinion</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Do you believe is on the right path toward becoming a developed nation?</td>
+                            <td><select name="" id="">
+                                    <option value="">Yes,I agree</option>
+                                    <option value="">No,I disagree</option>
+                                </select></td>
+                        </tr>
+                        <tr>
+                            <td>Do you believe is on the right path toward becoming a developed nation?</td>
+                            <td><select name="" id="">
+                                    <option value="">Yes,I agree</option>
+                                    <option value="">No,I disagree</option>
+                                </select></td>
+                        </tr>
+                        <tr>
+                            <td>Do you believe is on the right path toward becoming a developed nation?</td>
+                            <td><select name="" id="">
+                                    <option value="">Yes,I agree</option>
+                                    <option value="">No,I disagree</option>
+                                </select></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+        <section>
+            <div class="recent">
+                <h1>Recent News</h1>
+                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology,
+                    promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy,
+                    digital transformation, and robust infrastructure, the country is set to become a global model of
+                    development.</p>
+                <div class="recent-container">
+                    <div class="left">
+                        <img src="./images/satelite.png" alt="" width="408" height="306">
+                    </div>
+                    <div class="right">
+                        <h1>Bangladesh Launches New Satellite</h1>
+                        <img src="./images/al-jazeera.png" alt="">
+                        <p>Date: 05/01/2025 Time: 10.25 PM</p>
+                        <p>Not until the creation and maintenance of decent conditions of life for all people are
+                            recognized and accepted as a common obligation of all people and all countries—not until
+                            then
+                            shall we,
+                            with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        <button>Read more</button>
+                    </div>
+                </div>
+                <div class="recent-container1">
+                    <div class="left">
+                        <img src="./images/satelite.png" alt="" width="408" height="306">
+                    </div>
+                    <div class="right">
+                        <h1>Bangladesh Launches New Satellite</h1>
+                        <img src="./images/al-jazeera.png" alt="">
+                        <p>Date: 05/01/2025 Time: 10.25 PM</p>
+                        <p>Not until the creation and maintenance of decent conditions of life for all people are
+                            recognized and accepted as a common obligation of all people and all countries—not until
+                            then
+                            shall we,
+                            with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        <button>Read more</button>
+                    </div>
+                </div>
+                <div class="recent-container">
+                    <div class="left">
+                        <img src="./images/satelite.png" alt="" width="408" height="306">
+                    </div>
+                    <div class="right">
+                        <h1>Bangladesh Launches New Satellite</h1>
+                        <img src="./images/al-jazeera.png" alt="">
+                        <p>Date: 05/01/2025 Time: 10.25 PM</p>
+                        <p>Not until the creation and maintenance of decent conditions of life for all people are
+                            recognized and accepted as a common obligation of all people and all countries—not until
+                            then
+                            shall we,
+                            with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        <button>Read more</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="donate">
+            <h1>Dontate Today</h1>
+            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting
+                inclusive growth, and ensuring sustainability.<br> With initiatives in renewable energy, digital
+                transformation, and robust infrastructure.</p>
+            <div class="takas">
+                <button class="taka">100 Taka</button>
+                <button class="taka">200 Taka</button>
+                <button class="taka">500 Taka</button>
+                <button class="taka">1000 Taka</button>
+            </div>
+            <button class="other">Other Amount(Taka)</button><br>
+            <button class="done">Done Now</button>
+        </section>
+        <section class="subscriber">
+            <h1>Subscribe Newsletter</h1>
+            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br> technology,
+                promoting
+                inclusive growth.</p>
+            <div class="subscribe-form">
+                <input type="email" placeholder="Enter your email here">
+                <button>Subscribe</button>
+            </div>
+            <p>We promise not to spam you!</p>
+        </section>
+    </main>
+    <footer>
+        <h1>Bangladesh 2.0</h1>
+        <hr>
+        <div class="footer">
+            <img src="./images/facebook.png" alt="">
+            <img src="./images/instagram.png" alt="">
+            <img src="./images/x.png" alt="">
+        </div>
+        <br>
+        <small>Not&copy;without my permission</small>
+    </footer>
 </body>
 
 </html>
