--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <button class="fira-sans-normal">Explore New Bangladesh</button>
         </div>
         <div class="banner-img">
-            <img src="./images/hero.png" alt="" height="400" width="473">
+            <img src="./images/hero.png" alt="" >
         </div>
     </header>
     <main>
@@ -102,7 +102,7 @@
                 <small class="pe">Chief Adviser of the People's Republic of Bangladesh</small>
             </div>
         </section>
-        <section class="table">
+        <section class="table hide">
             <div class="table-container">
                 <h2>Your Opinion Matters</h2>
                 <table>
@@ -147,7 +147,7 @@
                     development.</p>
                 <div class="recent-container">
                     <div class="left">
-                        <img src="./images/satelite.png" alt="" width="408" height="306">
+                        <img src="./images/satelite.png" alt="" >
                     </div>
                     <div class="right">
                         <h1>Bangladesh Launches New Satellite</h1>
@@ -161,7 +161,7 @@
                         <button>Read more</button>
                     </div>
                 </div>
-                <div class="recent-container1">
+                <div class="recent-container1 hide">
                     <div class="left">
                         <img src="./images/satelite.png" alt="" width="408" height="306">
                     </div>
@@ -177,7 +177,7 @@
                         <button>Read more</button>
                     </div>
                 </div>
-                <div class="recent-container">
+                <div class="recent-container hide">
                     <div class="left">
                         <img src="./images/satelite.png" alt="" width="408" height="306">
                     </div>
@@ -195,7 +195,7 @@
                 </div>
             </div>
         </section>
-        <section class="donate">
+        <section class="donate ">
             <h1>Dontate Today</h1>
             <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting
                 inclusive growth, and ensuring sustainability.<br> With initiatives in renewable energy, digital
@@ -209,7 +209,7 @@
             <button class="other">Other Amount(Taka)</button><br>
             <button class="done">Done Now</button>
         </section>
-        <section class="subscriber">
+        <section class="subscriber ">
             <h1>Subscribe Newsletter</h1>
             <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br> technology,
                 promoting
@@ -221,10 +221,10 @@
             <p>We promise not to spam you!</p>
         </section>
     </main>
-    <footer>
+    <footer >
         <h1>Bangladesh 2.0</h1>
         <hr>
-        <div class="footer">
+        <div class="footer ">
             <img src="./images/facebook.png" alt="">
             <img src="./images/instagram.png" alt="">
             <img src="./images/x.png" alt="">
